Work on graphics, yes

--- a/117raster/117raster.csproj
+++ b/117raster/117raster.csproj
@@ -137,6 +137,7 @@
       <Link>ModuleHSV\FormHSV.Designer.cs</Link>
       <DependentUpon>FormHSV.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModulePaint\ModulePaint.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormMain.resx">
